# MylifeApp

./: .gitignore  README.md  pyproject.toml  req.txt
mylife/: DB.py  analytics.py  habit.py  mla.py  schema.py  seed_dict.json
mylife.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mylife/tests/: test_DB.py  test_analytics.py  test_data.py  test_habit.py  test_working_dict.json
