[project]
name = "mylife"
version = "1.0"
authors = [{name = "Omar Salah", email = "osalah067@gmail.com"}]
description = "Mylife is a JSON-based habit tracking application that uses a CLI for user interaction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs==25.1.0",
    "click==8.1.8",
    "colorama==0.4.6",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "referencing==0.36.2",
    "rpds-py==0.23.1",
    "typing_extensions==4.12.2",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.5",
    "setuptools==75.8.2"
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mla = "mylife.mla:main"